<resources>
    <!--WebCam names-->
    <array name="WebCam_Descriptions">
        <item>St Mark\'s\nClock Tower 1</item>
        <item>St Mark\'s\nClock Tower 2</item>
        <item>St Mark\'s\nClock Tower 3</item>
        <item>Rialto \nPalazzo Cavalli 1</item>
        <item>Rialto \nPalazzo Cavalli 2</item>
        <item>Murano island\nLighthouse 1</item>
        <item>Murano island\nLighthouse 2</item>
        <item>Murano island\nLighthouse 3</item>
        <item>St Mark\'s basin\nPunta Salute 1</item>
        <item>St Mark\'s basin\nPunta Salute 2</item>
    </array>
    <!--WebCam URLs-->
    <array name="WebCam_URLs">
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/smarcoweb1.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/smarcoweb2.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/smarcoweb3.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/rialtoweb1.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/rialtoweb2.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/muranoweb1.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/muranoweb2.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/muranoweb3.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/saluteweb1.jpg
        </item>
        <item>https://www.comune.venezia.it/sites/default/files/publicCPSM2/webcam/saluteweb2.jpg
        </item>
    </array>
    <string name="app_name">Acqua Alta</string>
    <string name="app_toolbarname">Venice High Tide</string>
    <string name="title_activity_tide_graph">Tide Graph</string>
    <string name="title_activity_tide_month_graph">Tide Monthly Graph</string>
    <string name="title_activity_web_cam">Select WebCam</string>
    <string name="title_activity_fullscreen_web_cam">Selected WebCam</string>
    <string name="action_tideGraph">Tide Graph</string>
    <string name="action_webcams">WebCams</string>
    <string name="action_info">About</string>
    <string name="info_DialogMessage">Copyright @2026 SeblogApps All rights reserved Special thanks to Venice city council for the provided data The information contained in this app is for general information purposes only. The information is provided by Venice Open Data and while they try to keep the information up to date and correct, I make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the app or the information, products, services, or related graphics contained on the app for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</string>
    <!--AdMob-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7349086147955397/1988355210</string>
    <string name="banner_ad_unit_id_tidegraph" translatable="false">ca-app-pub-7349086147955397/3325487617</string>
    <string name="banner_ad_unit_id_tidemonthgraph" translatable="false">ca-app-pub-7349086147955397/7162892034</string>
    <string name="tideTableRecapHeader_Title">Tidal predictions</string>
    <string name="tideTableRecapHeader_SubTitle">Maximum predicted tide level:</string>
    <string name="tideTableHeader_Title">Prediction table</string>
    <string name="tideTableHeader_Date">Date time</string>
    <string name="tideTableHeader_Extremal">Extreme</string>
    <string name="tideTableHeader_Value">Value (cm)</string>
    <string name="webcam_AccessibilityDescription" translatable="false">WebCam Image</string>
    <string name="snackbar_InternetConnectionNeeded">Internet connection needed</string>
    <string name="tideForecast_lastUpdateText">"Last Update: "</string>
    <string name="tideForecast_lastUpdateText_at">" at "</string>
    <!--Extremal values descriptions-->
    <string name="extremalValueDesc_ExtraHigh">Exceptional high tide (over  140cm)</string>
    <string name="extremalValueDesc_VeryHigh">Very high tide (betw. 110cm and 139cm)</string>
    <string name="extremalValueDesc_High">High tide (between  80cm and 109cm)</string>
    <string name="extremalValueDesc_Normal">Normal tide (betw. -50cm and 79cm)</string>
    <string name="extremalValueDesc_Low">Tide under the normal level (betw. -90cm and -51cm)</string>
    <string name="extremalValueDesc_ExtraLow">Exceptional low tide (less than -90cm)</string>
    <string name="extremalValueDesc_Unknown">Unexpected value</string>
    <string name="extremalValueDesc_Units" translatable="false">"cm "</string>
    <string name="extremalValueDesc_onDate">"on "</string>
    <string name="extremalValueDesc_atTime">" at "</string>
    <string name="extremal_Min">minimum</string>
    <string name="extremal_Max">maximum</string>
    <string name="tideTableSeparatorChar" translatable="false">-</string>
    <string name="snackbar_NoInternetDatafromCache">No connection available, data loaded from cache</string>
    <string name="tidegraph_shortcut_short_label1">Tide Graph</string>
    <string name="tidegraph_shortcut_long_label1">Show Tide Graph</string>
    <string name="tidegraph_shortcut_disabled_label1">Sorry Tide Graph is not available</string>
    <string name="webcam_shortcut_short_label1">WebCams</string>
    <string name="webcam_shortcut_long_label1">Show Webcam</string>
    <string name="webcam_shortcut_disabled_label1">Sorry WebCams are not available</string>
    <string name="snackbar_ErrorDownloadingData">Download failed, please try again</string>
    <string name="action_tideMonthGraph">Tide Monthly Graph</string>
    <string name="string_fabdescription">Reload</string>
    <string name="tideMonthGraphAttibution">Source:\nhttps://www.comune.venezia.it/content/i-grafici-della-marea-astronomica-a-venezia</string>
    <string name="ads">Ads</string>
    <string name="monthlyTideGraph_shortcut_short_label1">Monthly Graph</string>
    <string name="monthlyTideGraph_shortcut_long_label1">Monthly Tide Graph</string>
    <string name="monthlyTideGraph_shortcut_disabled_label1">Monthly Tide Graph Disabled</string>
    <string name="more_menu">More</string>
    <string name="privacy_settings" translatable="false">Privacy Settings</string>
</resources>
