<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="appinventor.ai_seblog2k.Acqua_Alta_English.MainActivity">

    <item
        android:id="@+id/action_tideGraph"
        android:orderInCategory="10"
        android:title="@string/action_tideGraph"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_line_chart"/>
    <item
        android:id="@+id/action_webCams"
        android:orderInCategory="20"
        android:title="@string/action_webcams"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_picture"/>

    <item
        android:id="@+id/action_Info"
        android:orderInCategory="60"
        android:title="@string/action_info"
        app:showAsAction="never"/>
</menu>
